# crust-of-rust

./: .gitignore  Cargo.toml  README.md
async-await/: Cargo.toml  README.md
async-await/src/: main.rs
async_await/: Cargo.toml  README.md
async_await/src/: main.rs
atomics/: README.md
atomics/src/: ex1.rs  ex2.rs  main.rs
build_and_ffi/: Cargo.toml  README.md  build.rs
channels/: Cargo.toml
channels/src/: lib.rs
dispatch_fat_pointers/: Cargo.toml  README.md
dispatch_fat_pointers/src/: ex1.rs  main.rs
drop_check/: Cargo.toml  README.md
drop_check/src/: ex1.rs  ex2.rs  ex3.rs  main.rs
function_traits/: Cargo.toml  README.md
function_traits/src/: main.rs
iterators/: Cargo.toml
iterators/src/: lib.rs
libsodium-sys/: Cargo.toml  build.rs
libsodium-sys/src/: lib.rs
lifetimes/: Cargo.toml  README.md
lifetimes/src/: lib.rs
macros_declarative/: Cargo.toml  README.md
macros_declarative/src/: lib.rs
send_sync/: README.md
send_sync/src/: main.rs
smart_pointers/: Cargo.toml  README.md
smart_pointers/src/: cell.rs  lib.rs  rc.rs  refcell.rs
sorting/: README.md
sorting/src/: bubblesort.rs  insertion.rs  lib.rs  quicksort.rs  selection.rs
subtyping_variance/: Cargo.toml  README.md
subtyping_variance/src/: lib.rs
