[workspace]
members = [
    "channels",
    "iterators",
    "lifetimes",
    "macros_declarative",
    "smart_pointers",
    "sorting",
    "subtyping_variance",
    "drop_check",
    "atomics",
    "async_await",
    "dispatch_fat_pointers",
    "function_traits",
    "send_sync",
    
]